Awesomplete z-index fixes (#3040)

--- a/frappe/public/less/list.less
+++ b/frappe/public/less/list.less
@@ -308,6 +308,7 @@
 
 		.awesomplete > ul {
 			top: 15px;
+			z-index: 100;
 		}
 	}
 
